--- a/Video Code.html
+++ b/Video Code.html
@@ -6,8 +6,8 @@
     <BODY style="background-color: Hex #b28dcb" align="center">
         <h1 style="color: antiquewhite;"> Megumi's version</h1>
         <style background color="Hex #E0B0FF"></style>
-    <video controls src="C:\Users\marie_iaf5kyn\Downloads\taylor swift - the 1 (folklore： the long pond studio sessions) 🩶.mp4" width="80%"></video>
-    <source src="C:\Users\marie_iaf5kyn\Downloads\taylor swift - the 1 (folklore： the long pond studio sessions) 🩶.mp4" width="80%"></VIDEO>
+    <video controls src="https://github.com/Shio77/The-1---megumis-ver./blob/main/taylor%20swift%20-%20the%201%20(folklore%EF%BC%9A%20the%20long%20pond%20studio%20sessions)%20%F0%9F%A9%B6.mp4" width="80%"></video>
+    <source src="https://github.com/Shio77/The-1---megumis-ver./blob/main/taylor%20swift%20-%20the%201%20(folklore%EF%BC%9A%20the%20long%20pond%20studio%20sessions)%20%F0%9F%A9%B6.mp4" width="80%"></VIDEO>
     <hr width="80%">
 </BODY>
 
